--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -8,7 +8,7 @@
 .itemList{
   width: 47%;
   box-sizing: border-box;
-  margin-bottom: 10rpx;
+  /* margin-bottom: 10rpx; */
   margin: 0 1.5%
 }
 .itemImg{
@@ -18,11 +18,11 @@
   width: 100%
 }
 .itemText{
-  height:165rpx;
+  height:120rpx;
   box-sizing: border-box
 }
 .itemTitle{
-  font-size: 26rpx;
+  font-size: 34rpx;
   color: black;
   overflow: hidden;
   text-overflow:ellipsis;
@@ -30,17 +30,17 @@
   -webkit-line-clamp: 2;
   width: 100%;
   -webkit-box-orient: vertical;
-  line-height: 38rpx;
+  line-height: 48rpx;
   margin-bottom: 14rpx;
 }
 .itemBottom{
   /* display: flex; */
   color: gray;
-  font-size: 20rpx;
+  font-size: 28rpx;
 }
 .itemPrice{
   color: #f74c76;
-  font-size: 24rpx;
+  font-size: 30rpx;
 }
 .itemBottom .people{
   margin: 0 22rpx;  
