--- a/pages/shopcart/shopcart.wxss
+++ b/pages/shopcart/shopcart.wxss
@@ -85,6 +85,10 @@
   line-height: 200rpx;
   text-align: center
 }
+.checkbox{
+  display: flex;
+  justify-content: flex-start
+}
 checkbox .wx-checkbox-input {
   width: 34rpx;
   height: 34rpx;
@@ -155,13 +159,16 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
 }
 .checkbox-group{
   display: inline-block;
-  margin: 0 14rpx;
+  padding: 0 14rpx;
   line-height: 40rpx;
+  width: 100%;
+  box-sizing: border-box
 }
 .allMoney{
   display: inline-block;
   line-height: 40rpx;
-  margin-left: 20rpx 
+  margin-left: 20rpx;
+  width: 78%;
 }
 .settlement{
   padding: 0 40rpx;
