--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -84,3 +84,10 @@ page{
   text-align: center;
   margin-bottom: 50rpx;
 }
+.errtext{
+  font-size: 30rpx;
+  line-height: 50rpx;
+  color: rgb(224, 18, 18);
+  display: block;
+  text-align: center
+}
