--- a/pages/orderpage/orderpage.wxss
+++ b/pages/orderpage/orderpage.wxss
@@ -1,1 +1,69 @@
 /* pages/orderpage/orderpage.wxss */
+page{
+  background: rgb(240, 240, 240)
+}
+.content .message{
+  padding: 30rpx;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  margin-bottom: 30rpx;
+}
+.message .iconfont{
+  font-size: 50rpx;
+}
+.icon-weizhi {
+  display: flex;
+  align-items: center;
+  margin-right: 20rpx;
+  color: #f74c76;
+}
+.message .messageDetail{
+  width: 100%;
+
+}
+.message .messageDetail view{
+  font-size: 34rpx;
+  line-height: 48rpx;
+}
+.message .messageDetail view:first-child text {
+  margin-left: 40rpx
+}
+.message .messageDetail view:last-child{
+  color: rgb(211, 211, 211);
+}
+.product{
+  padding: 20rpx 30rpx;
+  box-sizing: border-box;
+  background: white;
+}
+.product .productTop{
+  margin-bottom: 30rpx;
+}
+.product .productTop .productImg{
+  width: 25%;
+  border: 1rpx solid gainsboro;
+  margin-right: 20rpx;
+  display: flex;
+  align-items: center
+}
+.product .productImg image{
+  margin: auto;
+  width: 100%;
+}
+.product .productTitle{ 
+  width: 72%;
+  word-break:break-all;
+  font-size: 34rpx
+}
+.productClass{
+  border-bottom: 1rpx solid  rgb(211, 211, 211);
+  padding-bottom: 30rpx;
+  font-size: 34rpx
+}
+.textRight{
+  text-align: right;
+  font-size: 28rpx
+}
