--- a/pages/orderpage/orderpage.wxml
+++ b/pages/orderpage/orderpage.wxml
@@ -27,6 +27,38 @@
           <view class='textRight'>x1</view>
         </view>
       </view>
+      <view class='total'>
+        <view class='flexview'>
+          <text class='graycolor'>商品总金额：</text>
+          <text>￥60</text>
+        </view>
+        <view class='flexview'>
+          <text class='graycolor'>配送费：</text>
+          <text>￥0</text>
+        </view>
+        <view class='flexview'>
+          <text>合计：</text>
+          <text class='redcolor'>￥60</text>
+        </view>
+      </view>
+    </view>
+  </view>
+  <view class='contact'>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
+    </view>
+    <view class='textcontent'>订单编号：        <text class='blackcolor'>289748923748972398</text> 
     </view>
   </view>
 </view>
